feat: CA revoke API
